syntax = "proto3";

service Lampada {
  rpc LigarLampada (Empty) returns (Response) {}
  rpc DesligarLampada (Empty) returns (Response) {}
}

message Empty {}

message Response {
  string message = 1;
}
